# cerebras-performance-test

./: .gitignore  README.md  main.py  plots.py  pyproject.toml
results/: benchmark_prompts_llama-3.3-70b_20250301_164347.json  benchmark_prompts_llama-3.3-70b_20250301_164629.json  benchmark_prompts_llama-3.3-70b_20250301_171054.json  benchmark_prompts_llama-3.3-70b_20250301_173859.json  benchmark_prompts_llama-3.3-70b_20250301_175120.json  benchmark_prompts_llama-3.3-70b_20250301_232900.json  benchmark_prompts_llama-3.3-70b_20250301_233755.json  benchmark_prompts_llama-3.3-70b_20250301_234003.json  benchmark_prompts_llama-3.3-70b_20250301_234208.json  benchmark_prompts_llama-3.3-70b_20250302_131353.json  benchmark_results_llama-3.3-70b_concurrency_1_iterations_10_20250301_164629.json  benchmark_results_llama-3.3-70b_concurrency_1_iterations_10_20250301_171054.json  benchmark_results_llama-3.3-70b_concurrency_1_iterations_20_20250301_232900.json  benchmark_results_llama-3.3-70b_concurrency_1_iterations_20_20250301_234208.json  benchmark_results_llama-3.3-70b_concurrency_1_iterations_3_20250301_233755.json  benchmark_results_llama-3.3-70b_concurrency_1_iterations_5_20250301_164347.json  benchmark_results_llama-3.3-70b_concurrency_1_iterations_5_20250301_234003.json  benchmark_results_llama-3.3-70b_concurrency_1_iterations_5_20250302_131353.json
